--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,4 @@
-<h1>homepage</h1>
+<div class="content">
+    <h1 style="text-align: center;">homepage</h1>
+    <random-person persons="persons" title="'Random Person'"></random-person>
+</div>
